# learn-cmake

./: CMakeLists.txt  main.cpp
configs/: README.md
docs/: README.md
examples/: README.md  exec_module1.cpp  exec_module1and2.cpp
modules/module1/: CMakeLists.txt
modules/module1/include/module1/: ClassMat.hpp
modules/module2/: CMakeLists.txt
modules/module2/include/module2/: ClassEigenMat.hpp
modules/module2/src/: ClassEigenMat.cpp
resources/: README.md
scripts/: README.md
